# Numerical_algorithms

./: CMakeLists.txt  README.md  dependency.h  main.cpp  paths.h
lib/: utility.cpp  utility.h
lib/cli/menu/: menu.cpp  menu.h
resources/: .fuse_hidden000000760000001c  menu.json
